adds section on three uncertainties

--- a/docs/2025-dotson-phd.bib
+++ b/docs/2025-dotson-phd.bib
@@ -3221,24 +3221,6 @@ Publisher: Nature Publishing Group},
 	file = {Full Text PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/35C4TBYT/Gutowski et al. - 2013 - The energy required to produce materials constrai.pdf:application/pdf;Gutowski et al. - 2013 - The energy required to produce materials constrai.pdf:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/7TS8YNAM/Gutowski et al. - 2013 - The energy required to produce materials constrai.pdf:application/pdf;Snapshot:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/4WNDWD69/rsta.2012.html:text/html},
 }
 
-@article{yue_review_2018,
-	title = {A review of approaches to uncertainty assessment in energy system optimization models},
-	volume = {21},
-	issn = {2211-467X},
-	url = {https://www.sciencedirect.com/science/article/pii/S2211467X18300543},
-	doi = {10.1016/j.esr.2018.06.003},
-	abstract = {Energy system optimization models ({ESOMs}) have been used extensively in providing insights to decision makers on issues related to climate and energy policy. However, there is a concern that the uncertainties inherent in the model structures and input parameters are at best underplayed and at worst ignored. Compared to other types of energy models, {ESOMs} tend to use scenarios to handle uncertainties or treat them as a marginal issue. Without adequately addressing uncertainties, the model insights may be limited, lack robustness, and may mislead decision makers. This paper provides an in-depth review of systematic techniques that address uncertainties for {ESOMs}. We have identified four prevailing uncertainty approaches that have been applied to {ESOM} type models: Monte Carlo analysis, stochastic programming, robust optimization, and modelling to generate alternatives. For each method, we review the principles, techniques, and how they are utilized to improve the robustness of the model results to provide extra policy insights. In the end, we provide a critical appraisal on the use of these methods.},
-	pages = {204--217},
-	journaltitle = {Energy Strategy Reviews},
-	shortjournal = {Energy Strategy Reviews},
-	author = {Yue, Xiufeng and Pye, Steve and {DeCarolis}, Joseph and Li, Francis G. N. and Rogan, Fionn and Gallachóir, Brian Ó.},
-	urldate = {2021-03-24},
-	date = {2018-08-01},
-	langid = {english},
-	keywords = {Energy system modelling, Uncertainty, Modelling to generate alternatives, Monte Carlo analysis, Robust optimization, Stochastic programming},
-	file = {ScienceDirect Full Text PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/W3G45AWB/Yue et al. - 2018 - A review of approaches to uncertainty assessment i.pdf:application/pdf;ScienceDirect Snapshot:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/PFQY3S2D/S2211467X18300543.html:text/html},
-}
-
 @article{carducci_planning_2017,
 	title = {Planning tool for polygeneration design in microgrids},
 	volume = {143},
@@ -13358,7 +13340,7 @@ facilities.},
 	urldate = {2023-12-26},
 	date = {1995-05-18},
 	keywords = {Optimization, Environment, Planning, Electric power, Energy conservation},
-	file = {ScienceDirect Snapshot:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/Q7THS99U/037722179400190N.html:text/html},
+	file = {PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/6ZP4B77F/Hobbs - 1995 - Optimization methods for electric utility resource planning.pdf:application/pdf;ScienceDirect Snapshot:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/Q7THS99U/037722179400190N.html:text/html},
 }
 
 @article{fox_ambiguity_1995,
@@ -18984,7 +18966,7 @@ routes, treatment technologies, and disposal sites is of prime ...},
 	file = {Skjølsvold and Coenen - 2021 - Are rapid and inclusive energy and climate transit.pdf:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/B3HQC558/Skjølsvold and Coenen - 2021 - Are rapid and inclusive energy and climate transit.pdf:application/pdf},
 }
 
-@article{yue_review_2018-1,
+@article{yue_review_2018,
 	title = {A review of approaches to uncertainty assessment in energy system optimization models},
 	volume = {21},
 	issn = {2211467X},
@@ -18998,7 +18980,7 @@ routes, treatment technologies, and disposal sites is of prime ...},
 	urldate = {2021-10-27},
 	date = {2018-08},
 	langid = {english},
-	keywords = {Energy system modelling, Uncertainty, Modelling to generate alternatives, Monte Carlo analysis, Robust optimization, Stochastic programming},
+	keywords = {Energy system modelling, Modelling to generate alternatives, Monte Carlo analysis, Robust optimization, Stochastic programming, Uncertainty},
 	file = {ScienceDirect Snapshot:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/C4VDKCFM/S2211467X18300543.html:text/html;Yue et al. - 2018 - A review of approaches to uncertainty assessment i.pdf:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/GPDZ5BUD/Yue et al. - 2018 - A review of approaches to uncertainty assessment i.pdf:application/pdf},
 }
 
@@ -21310,4 +21292,30 @@ Publisher: Multidisciplinary Digital Publishing Institute},
 	langid = {english},
 	keywords = {adaptability, data analysis, reproducibility, scalability, sustainability, transparency, workflow management},
 	file = {Full Text PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/9T3QLGIP/Mölder et al. - 2021 - Sustainable data analysis with Snakemake.pdf:application/pdf},
+}
+
+@report{united_states_environmental_protection_agency_epa_united_nodate,
+	title = {United States Greenhouse Gas Inventory: Executive Summary},
+	url = {https://www.epa.gov/system/files/documents/2024-04/us-ghg-inventory-2024-chapter-executive-summary_04-16-2024.pdf},
+	author = {{United States Environmental Protection Agency (EPA)}},
+	urldate = {2025-08-13},
+	file = {PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/I8AUHJMK/us-ghg-inventory-2024-chapter-executive-summary_04-16-2024.pdf:application/pdf},
+}
+
+@article{bertsimas_theory_2011,
+	title = {Theory and Applications of Robust Optimization},
+	volume = {53},
+	issn = {0036-1445, 1095-7200},
+	url = {http://epubs.siam.org/doi/10.1137/080734510},
+	doi = {10.1137/080734510},
+	abstract = {In this paper we survey the primary research, both theoretical and applied, in the area of robust optimization ({RO}). Our focus is on the computational attractiveness of {RO} approaches, as well as the modeling power and broad applicability of the methodology. In addition to surveying prominent theoretical results of {RO}, we also present some recent results linking {RO} to adaptable models for multistage decision-making problems. Finally, we highlight applications of {RO} across a wide spectrum of domains, including ﬁnance, statistics, learning, and various areas of engineering.},
+	pages = {464--501},
+	number = {3},
+	journaltitle = {{SIAM} Review},
+	shortjournal = {{SIAM} Rev.},
+	author = {Bertsimas, Dimitris and Brown, David B. and Caramanis, Constantine},
+	urldate = {2025-08-14},
+	date = {2011-01},
+	langid = {english},
+	file = {PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/NIBDDPB2/Bertsimas et al. - 2011 - Theory and Applications of Robust Optimization.pdf:application/pdf},
 }
