--- a/docs/6-modeling-theory/60-outline.tex
+++ b/docs/6-modeling-theory/60-outline.tex
@@ -27,63 +27,13 @@ expand on the procedure described by McGookin et al.
 \cite{mcgookin_advancing_2024} by outlining the process of developing an energy
 model according to three types of related uncertainties.
 
-Section \ref{section:arrows-thm} introduces Arrow's theorem and explains its
-significance for procedural justice and energy planning. Section
-\ref{section:participation-modeling} outlines a participatory modeling process
-described by McGookin et al. \cite{mcgookin_advancing_2024}. Section
-\ref{section:triple-uncertainty} elaborates on three types of uncertainty,
-introduced in Chapter \ref{chapter:lit-review}, that modeling must address.
-Lastly, Section \ref{section:modeling-phases} describes the relationships among
-each type of uncertainty and how the correspond to different phases of a
-modeling exercise.
-
-
-\section{Arrow's Impossibility Theorem}
-\label{section:arrows-thm}
-
-Modern social-choice theory was founded in 1950 with the publication of Arrow's
-\textit{A Difficulty in the Concept of Social Welfare}
-\cite{arrow_difficulty_1950}. The field of social-choice theory concerns itself
-with how society makes rational decisions given the plurality of individual
-preferences. Formally, given a set of possible choices $a_i (i: 1,..., N)$, and
-a set of individuals $x_j (j:1, ...,M)$, each with a preference order, $o_j$,
-over the options that allows for strict ranking ($a_i > a_j$) and equivalence
-($a_i \sim a_j$), how should the group decide the best option $a_i$
-\cite{franssen_arrows_2005}? Ideally, there exists a utility function, $f$, that
-maps the collection of individual preference orders, $P$ onto a collective
-preference order, $O$. $f: P \mapsto O$. Of course, there are trivial solutions,
-such as a dictatorship where only one preference order matters. To ensure a
-``faithful translation'' of $P$ onto $O$, Arrow proposed a set of constraints on
-$f$ \cite{arrow_difficulty_1950,franssen_arrows_2005}. Given a set of options
-$A$ the following must be satisfied:
-\begin{enumerate}
-    \item \textbf{Collective Rationality:} The collection of preference orders,
-    $P \subset A\times A$, must be
-    \begin{enumerate}
-        \item complete or connected --- all options and their relationships are
-        represented in at least one preference order, i.e., $(a_i > a_j | a_i <
-        a_j)$ $\in$ $P$, and
-        \item transitive --- if there are preference orders $a_i > a_j$ and $a_j
-        > a_k$ in $P$, then $a_i > a_k$ must also exist in $P$.
-    \end{enumerate}
-    \item \textbf{Unrestricted Domain:} There are no preference orders that are
-    \textit{a priori} excluded from the domain $P$.
-    \item \textbf{Non-dictatorship:} There is no individual $x_i$ whose
-    preferences always prevail. That is, for all possible $P \in (P_1, ... P_N)
-    \in \Pi(P)^N$ , when $x_i$ prefers $a_i > a_j$ that the utility function
-    $f(P_i)$ always results in $a_i > a_j$.
-    \item \textbf{Pareto Efficiency:} If all individuals prefer $a_i > a_j$,
-    then $a_i$ is strictly better for any $f(P_i)$.
-    \item \textbf{\ac{iia}:}
-\end{enumerate}
-
-Essentially, Arrow's theorem says that a universal preference order cannot exist
-without violating one or more democratic norms. Although originally developed
-with voting systems in mind, Franssen argues that \blockcquote[p.
-42]{franssen_arrows_2005}{Arrow’s theorem applies fully to multi-criteria
-decision problems as they occur in engineering design, making solution methods
-to such problems subject to the theorem’s negative result.} \textcolor{red}{The
-consequences of Arrow's theorem include\dots}
+First, Section \ref{section:triple-uncertainty} elaborates on three types of
+uncertainty, introduced in Chapter \ref{chapter:lit-review}, that modeling must
+address. Section \ref{section:participation-modeling} outlines a participatory
+modeling process described by McGookin et al. \cite{mcgookin_advancing_2024} and
+relates each type of uncertainty to corresponding phases of a modeling exercise.
+Lastly, Section \ref{section:arrows-thm} introduces Arrow's theorem and explains
+its significance for procedural justice and energy planning. 
 
 \section{Three Types of Uncertainty}
 \label{section:triple-uncertainty}
@@ -292,6 +242,23 @@ participatory processes.
 \section{Participatory Energy Modeling}
 \label{section:participation-modeling}
 
+There are \textit{normative} motivations for public engagement by those who
+believe it is the right thing to do \cite{wilsdon_see-through_2004} and
+\textit{substantive} motivations.
+\begin{quote}
+    \blockcquote[p. 39]{wilsdon_see-through_2004}{From a substantive
+    perspective, engagement processes aim to improve the quality of
+    decision-making, to create more socially robust scientific and technological
+    solutions.}
+\end{quote}
+Several papers in the literature recommend adopting a particpatory process when
+developing energy models because diverse perspectives strengthen the conclusions
+and inclusion generates buy-in from members of the community
+\cite{moallemi_participatory_2018, mcgookin_systematically_2022,
+venturini_linking_2019, bertsch_participatory_2016}. A recent paper from
+McGookin et al. proposed a generalized process for engaging participants in the
+process of energy modeling \cite{mcgookin_advancing_2024}. Figure
+\ref{fig:participatory-flow} illustrates this process in a flow chart.
 
 \begin{figure}[ht!]
     \centering
@@ -301,24 +268,59 @@ participatory processes.
     \label{fig:participatory-flow}
 \end{figure}
 
-\section{Modeling phases}
-\label{section:modeling-phases}
+Although this flow chart describes opportunities for co-creation across
+disciplines (yellow boxes in the top half) and with stakeholders (orange boxes
+in the bottom half), this section focuses on the latter. The process in Figure
+\ref{fig:participatory-flow} is separated into five phases: research design,
+model assumptions, modeling results, communication, and evaluation. These phases
+map onto the links between each uncertainty shown in Figure
+\ref{fig:triarchic-uncertainty}. Table \ref{tab:modeling-phases} summarizes this
+mapping.
+
+\begin{table}[ht!]
+    \centering
+    \caption{Mapping between triarchic uncertainties and the modeling phases
+    from McGookin et al. 2024 \cite{mcgookin_advancing_2024}.}
+    \label{tab:modeling-phases}
+    \begin{tabular}{lll}
+        \toprule
+        Modeling phase & Uncertainties & McGookin 2024
+        \cite{mcgookin_advancing_2024}\\
+        \midrule
+        Pre-descriptive&Parametric and Normative&Research Design\\
+        Descriptive&Parametric and Structural&Model Assumptions\\
+        Prescriptive&Structural and Normative&Model results\\
+        \bottomrule
+    \end{tabular}
+\end{table}
+
+Table \ref{tab:modeling-phases} should not be interpreted as a strict
+delineation between different phases of a modeling exercise. As shown in Figure
+\ref{fig:participatory-flow}, information gained during each phase can be used
+to iterate on earlier stages. Further, I do not fully agree with McGookin collection of tasks in each phase. The next sections outline the purpose of each
+phase.
+
+% \section{Modeling phases} \label{section:modeling-phases}
 
 \subsection{Pre-descriptive}
+This phase is primarily associated with research design and links normative and 
+parametric uncertainties. Here, modelers decide the tools to best answer a research question
+and make decisions about which model parameters to represent. In this stage,
+modelers can engage members of the public by identifying their needs and priorities.
+% Figure \ref{fig:uncertainty-flow-chart} shows a helpful flow chart for deciding the most suitable uncertainty 
+% analysis method from Yue et al. 2018 \cite{yue_review_2018}.
 
-Link between normative and parametric uncertainties. Normative decisions (i.e.,
-assumptions) are made about different model parameters. Along with which
-technologies are represented. At this stage, the uncertainties addressed range
-between aleatory and epistemic. The former is a ``known unknown'' that could be
-improved with more research. The latter corresponds to ``unknown unknowns'' or a
-``deep uncertainty'' that cannot be improved (cite).
-
-Engagement with the public is still important, here, since addressing uncertain
-parameters, such as technology costs, depends on your impression of the
-underlying data distribution.
-
+% \begin{figure}[ht!]
+%     \centering
+%     \includegraphics[width=\columnwidth]{figures/06_modeling_theory_chapter/uncertainty-method-flow-chart.jpg}
+%     \caption{Uncertainty technique selection flowchart. Reproduced from \cite{yue_review_2018}.}
+%     \label{fig:uncertainty-flow-chart}
+% \end{figure}
 
 \subsection{Descriptive}
+The descriptive phase is where the modeling occurs and where decisions about 
+model inputs, objective function
+
 Link between parametric and structural. This is where the ``modeling'' happens.
 Constraints and objectives give a model its descriptive power.
 
@@ -332,3 +334,68 @@ Link between structural and normative. Model results are interpreted and policy
 outcomes are prescribed. Alternatively, researchers may start the cycle anew by
 using the model results to adjust the normative assumptions. Perhaps because the
 model results don't show a desirable future?
+
+\section{Arrow's Impossibility Theorem}
+\label{section:arrows-thm}
+
+Modern social-choice theory was founded in 1950 with the publication of Arrow's
+\textit{A Difficulty in the Concept of Social Welfare}
+\cite{arrow_difficulty_1950}. The field of social-choice theory concerns itself
+with how society makes rational decisions given the plurality of individual
+preferences. Formally, given a set of possible choices $a_i (i: 1,..., N)$, and
+a set of individuals $x_j (j:1, ...,M)$, each with a preference order, $o_j$,
+over the options that allows for strict ranking ($a_i > a_j$) and equivalence
+($a_i \sim a_j$), how should the group decide the best option $a_i$
+\cite{franssen_arrows_2005}? Ideally, there exists a utility function, $f$, that
+maps the collection of individual preference orders, $P$ onto a collective
+preference order, $O$. $f: P \mapsto O$. Of course, there are trivial solutions,
+such as a dictatorship where only one preference order matters. To ensure a
+``faithful translation'' of $P$ onto $O$, Arrow proposed a set of constraints on
+$f$ \cite{arrow_difficulty_1950,franssen_arrows_2005}. Given a set of options
+$A$ the following must be satisfied:
+\begin{enumerate}
+    \item \textbf{Collective Rationality:} The collection of preference orders,
+    $P \subset A\times A$, must be
+    \begin{enumerate}
+        \item complete or connected --- all options and their relationships are
+        represented in at least one preference order, i.e., $(a_i > a_j | a_i <
+        a_j)$ $\in$ $P$, and
+        \item transitive --- if there are preference orders $a_i > a_j$ and $a_j
+        > a_k$ in $P$, then $a_i > a_k$ must also exist in $P$.
+    \end{enumerate}
+    \item \textbf{Unrestricted Domain:} There are no preference orders that are
+    \textit{a priori} excluded from the domain $P$.
+    \item \textbf{Non-dictatorship:} There is no individual $x_i$ whose
+    preferences always prevail. That is, for all possible $P \in (P_1, ... P_N)
+    \in \Pi(P)^N$ , when $x_i$ prefers $a_i > a_j$ that the utility function
+    $f(P_i)$ always results in $a_i > a_j$.
+    \item \textbf{Pareto Efficiency:} If all individuals prefer $a_i > a_j$,
+    then $a_i$ is strictly better for any $f(P_i)$.
+    \item \textbf{\ac{iia}:} Given $a_i > a_j$ the addition or removal of a
+    third option, $a_k \neq a_i, a_j$, does not change the original preference
+    order to $a_i < a_j$.
+\end{enumerate}
+
+Essentially, Arrow's Impossibility theorem says that a universal preference
+order cannot exist without violating one or more of the above constraints.
+Franssen argues that \blockcquote[p. 42]{franssen_arrows_2005}{Arrow’s theorem
+applies fully to multi-criteria decision problems as they occur in engineering
+design, making solution methods to such problems subject to the theorem’s
+negative result.} Arrow's theorem has at least three consequences for
+participatory modeling. First, there is no one-size fits all approach to public
+engagement or decision-making. Participatory processes must be appropriately
+contextualized for each new situation, or ``place-based''
+\cite{elmallah_frontlining_2022}. Second, ideals of justice can never be
+adequately captured by an aggregated metric since this would imply a utility
+function that maps individual preferences onto a collective preference
+\cite{jafino_enabling_2021}. Finally, since such a utility function cannot exist
+participatory processes must go beyond survey ranking of modeled solutions and
+include a deliberative component to evaluate tradeoffs among alternatives and
+their significance. Indeed, this is the only way.
+% Indeed, one study that conducted an online survey found an apparent paradox
+% \begin{quote} \blockcquote[p.199]{bertsch_participatory_2016}{On the one hand,
+% grid expansion projects, as most other large infrastructure projects, are
+% facing acceptance problems. This fact is, inter alia, confirmed by our online
+% survey. On the other hand, the relative importance of the environmental
+% sustainability and the security of supply was valued much higher than that of
+% the public acceptance.} \end{quote}
