meager start at interview chapter edits

--- a/docs/2025-dotson-phd.bib
+++ b/docs/2025-dotson-phd.bib
@@ -3221,24 +3221,6 @@ Publisher: Nature Publishing Group},
 	file = {Full Text PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/35C4TBYT/Gutowski et al. - 2013 - The energy required to produce materials constrai.pdf:application/pdf;Gutowski et al. - 2013 - The energy required to produce materials constrai.pdf:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/7TS8YNAM/Gutowski et al. - 2013 - The energy required to produce materials constrai.pdf:application/pdf;Snapshot:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/4WNDWD69/rsta.2012.html:text/html},
 }
 
-@article{yue_review_2018,
-	title = {A review of approaches to uncertainty assessment in energy system optimization models},
-	volume = {21},
-	issn = {2211-467X},
-	url = {https://www.sciencedirect.com/science/article/pii/S2211467X18300543},
-	doi = {10.1016/j.esr.2018.06.003},
-	abstract = {Energy system optimization models ({ESOMs}) have been used extensively in providing insights to decision makers on issues related to climate and energy policy. However, there is a concern that the uncertainties inherent in the model structures and input parameters are at best underplayed and at worst ignored. Compared to other types of energy models, {ESOMs} tend to use scenarios to handle uncertainties or treat them as a marginal issue. Without adequately addressing uncertainties, the model insights may be limited, lack robustness, and may mislead decision makers. This paper provides an in-depth review of systematic techniques that address uncertainties for {ESOMs}. We have identified four prevailing uncertainty approaches that have been applied to {ESOM} type models: Monte Carlo analysis, stochastic programming, robust optimization, and modelling to generate alternatives. For each method, we review the principles, techniques, and how they are utilized to improve the robustness of the model results to provide extra policy insights. In the end, we provide a critical appraisal on the use of these methods.},
-	pages = {204--217},
-	journaltitle = {Energy Strategy Reviews},
-	shortjournal = {Energy Strategy Reviews},
-	author = {Yue, Xiufeng and Pye, Steve and {DeCarolis}, Joseph and Li, Francis G. N. and Rogan, Fionn and Gallachóir, Brian Ó.},
-	urldate = {2021-03-24},
-	date = {2018-08-01},
-	langid = {english},
-	keywords = {Energy system modelling, Uncertainty, Modelling to generate alternatives, Monte Carlo analysis, Robust optimization, Stochastic programming},
-	file = {ScienceDirect Full Text PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/W3G45AWB/Yue et al. - 2018 - A review of approaches to uncertainty assessment i.pdf:application/pdf;ScienceDirect Snapshot:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/PFQY3S2D/S2211467X18300543.html:text/html},
-}
-
 @article{carducci_planning_2017,
 	title = {Planning tool for polygeneration design in microgrids},
 	volume = {143},
@@ -4082,6 +4064,23 @@ collective effort of all parties involved is greatly appreciated.},
 	langid = {english},
 	keywords = {Molten salt reactor, {TENDL}, Xe-135m, Xenon},
 	file = {ScienceDirect Snapshot:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/DRQKF3ZL/S0149197016302116.html:text/html},
+}
+
+@article{wilson_best_2014,
+	title = {Best Practices for Scientific Computing},
+	volume = {12},
+	url = {http://dx.doi.org/10.1371/journal.pbio.1001745},
+	doi = {10.1371/journal.pbio.1001745},
+	abstract = {We describe a set of best practices for scientific software development, based on research and experience, that will improve scientists' productivity and the reliability of their software.},
+	pages = {e1001745},
+	number = {1},
+	journaltitle = {{PLoS} Biol},
+	shortjournal = {{PLoS} Biol},
+	author = {Wilson, Greg V. and Aruliah, D. A. and Brown, C. Titus and Chue Hong, Neil P. and Davis, Matt and Guy, Richard T. and Haddock, Steven H. D. and Huff, Kathryn D. and Mitchell, Ian M. and Plumbley, Mark D. and Waugh, Ben and White, Ethan P. and Wilson, Paul},
+	urldate = {2014-09-08},
+	date = {2014-01-07},
+	keywords = {Computer Science - Mathematical Software, Computer Science - Software Engineering, Include File on Website, recommendation, science, Science, software},
+	file = {1210.0530 PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/RUGPQ89Z/Wilson et al. - 2012 - Best Practices for Scientific Computing.pdf:application/pdf;1210.0530 PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/6BWMN925/Wilson et al. - 2012 - Best Practices for Scientific Computing.pdf:application/pdf;arXiv.org Snapshot:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/GEAQU4PR/Wilson et al. - 2012 - Best Practices for Scientific Computing.html:text/html;arXiv.org Snapshot:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/TNJ5VZBD/Wilson et al. - 2012 - Best Practices for Scientific Computing.html:text/html;PLoS Full Text PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/JG3XZ3EN/Wilson et al. - 2014 - Best Practices for Scientific Computing.pdf:application/pdf;PLoS Full Text PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/T7PS6IGX/Wilson et al. - 2014 - Best Practices for Scientific Computing.pdf:application/pdf;PLoS Full Text PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/NZPICHHU/Wilson et al. - 2014 - Best Practices for Scientific Computing.pdf:application/pdf;PLoS Full Text PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/DRSWE54I/Wilson et al. - 2014 - Best Practices for Scientific Computing.pdf:application/pdf;PLoS Snapshot:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/JWG3964F/infodoi10.1371journal.pbio.html:text/html;PLoS Snapshot:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/GVVR84ZK/infodoi10.1371journal.pbio.html:text/html;PLoS Snapshot:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/A9HDSJBB/Wilson et al. - 2014 - Best Practices for Scientific Computing.html:text/html;PLoS Snapshot:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/FXDIXXQ2/Wilson et al. - 2014 - Best Practices for Scientific Computing.html:text/html},
 }
 
 @article{liu_wind_2017,
@@ -13341,7 +13340,7 @@ facilities.},
 	urldate = {2023-12-26},
 	date = {1995-05-18},
 	keywords = {Optimization, Environment, Planning, Electric power, Energy conservation},
-	file = {ScienceDirect Snapshot:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/Q7THS99U/037722179400190N.html:text/html},
+	file = {PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/6ZP4B77F/Hobbs - 1995 - Optimization methods for electric utility resource planning.pdf:application/pdf;ScienceDirect Snapshot:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/Q7THS99U/037722179400190N.html:text/html},
 }
 
 @article{fox_ambiguity_1995,
@@ -18967,7 +18966,7 @@ routes, treatment technologies, and disposal sites is of prime ...},
 	file = {Skjølsvold and Coenen - 2021 - Are rapid and inclusive energy and climate transit.pdf:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/B3HQC558/Skjølsvold and Coenen - 2021 - Are rapid and inclusive energy and climate transit.pdf:application/pdf},
 }
 
-@article{yue_review_2018-1,
+@article{yue_review_2018,
 	title = {A review of approaches to uncertainty assessment in energy system optimization models},
 	volume = {21},
 	issn = {2211467X},
@@ -18981,7 +18980,7 @@ routes, treatment technologies, and disposal sites is of prime ...},
 	urldate = {2021-10-27},
 	date = {2018-08},
 	langid = {english},
-	keywords = {Energy system modelling, Uncertainty, Modelling to generate alternatives, Monte Carlo analysis, Robust optimization, Stochastic programming},
+	keywords = {Energy system modelling, Modelling to generate alternatives, Monte Carlo analysis, Robust optimization, Stochastic programming, Uncertainty},
 	file = {ScienceDirect Snapshot:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/C4VDKCFM/S2211467X18300543.html:text/html;Yue et al. - 2018 - A review of approaches to uncertainty assessment i.pdf:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/GPDZ5BUD/Yue et al. - 2018 - A review of approaches to uncertainty assessment i.pdf:application/pdf},
 }
 
@@ -21277,4 +21276,78 @@ Publisher: Multidisciplinary Digital Publishing Institute},
 	langid = {english},
 	doi = {10.2172/1854582},
 	file = {Wilson et al. - 2022 - End-Use Load Profiles for the U.S. Building Stock.pdf:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/2QPHHWJF/Wilson et al. - 2022 - End-Use Load Profiles for the U.S. Building Stock.pdf:application/pdf},
+}
+
+@misc{molder_sustainable_2021,
+	title = {Sustainable data analysis with Snakemake},
+	rights = {http://creativecommons.org/licenses/by/4.0/},
+	url = {https://f1000research.com/articles/10-33},
+	doi = {10.12688/f1000research.29032.2},
+	abstract = {Data analysis often entails a multitude of heterogeneous steps, from the application of various command line tools to the usage of scripting languages like R or Python for the generation of plots and tables. It is widely recognized that data analyses should ideally be conducted in a reproducible way.\&nbsp;Reproducibility enables technical validation and regeneration of results on the original or even new data. However, reproducibility alone is by no means sufficient to deliver an analysis that is of lasting impact (i.e., sustainable) for the field, or even just one research group. We postulate that it is equally important to ensure adaptability and transparency. The former describes the ability to modify the analysis to answer extended or slightly different research questions. The latter describes the ability to understand the analysis in order to judge whether it is not only technically, but methodologically valid. Here, we analyze the properties needed for a data analysis to become reproducible, adaptable, and transparent. We show how the popular workflow management system Snakemake can be used to guarantee this, and how it enables an ergonomic, combined, unified representation of all steps involved in data analysis, ranging from raw data processing, to quality control and fine-grained, interactive exploration and plotting of final results.},
+	number = {10:33},
+	publisher = {F1000Research},
+	author = {Mölder, Felix and Jablonski, Kim Philipp and Letcher, Brice and Hall, Michael B. and Tomkins-Tinch, Christopher H. and Sochat, Vanessa and Forster, Jan and Lee, Soohyun and Twardziok, Sven O. and Kanitz, Alexander and Wilm, Andreas and Holtgrewe, Manuel and Rahmann, Sven and Nahnsen, Sven and Köster, Johannes},
+	urldate = {2024-08-09},
+	date = {2021-04-19},
+	langid = {english},
+	keywords = {adaptability, data analysis, reproducibility, scalability, sustainability, transparency, workflow management},
+	file = {Full Text PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/9T3QLGIP/Mölder et al. - 2021 - Sustainable data analysis with Snakemake.pdf:application/pdf},
+}
+
+@report{united_states_environmental_protection_agency_epa_united_nodate,
+	title = {United States Greenhouse Gas Inventory: Executive Summary},
+	url = {https://www.epa.gov/system/files/documents/2024-04/us-ghg-inventory-2024-chapter-executive-summary_04-16-2024.pdf},
+	author = {{United States Environmental Protection Agency (EPA)}},
+	urldate = {2025-08-13},
+	file = {PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/I8AUHJMK/us-ghg-inventory-2024-chapter-executive-summary_04-16-2024.pdf:application/pdf},
+}
+
+@article{bertsimas_theory_2011,
+	title = {Theory and Applications of Robust Optimization},
+	volume = {53},
+	issn = {0036-1445, 1095-7200},
+	url = {http://epubs.siam.org/doi/10.1137/080734510},
+	doi = {10.1137/080734510},
+	abstract = {In this paper we survey the primary research, both theoretical and applied, in the area of robust optimization ({RO}). Our focus is on the computational attractiveness of {RO} approaches, as well as the modeling power and broad applicability of the methodology. In addition to surveying prominent theoretical results of {RO}, we also present some recent results linking {RO} to adaptable models for multistage decision-making problems. Finally, we highlight applications of {RO} across a wide spectrum of domains, including ﬁnance, statistics, learning, and various areas of engineering.},
+	pages = {464--501},
+	number = {3},
+	journaltitle = {{SIAM} Review},
+	shortjournal = {{SIAM} Rev.},
+	author = {Bertsimas, Dimitris and Brown, David B. and Caramanis, Constantine},
+	urldate = {2025-08-14},
+	date = {2011-01},
+	langid = {english},
+	file = {PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/NIBDDPB2/Bertsimas et al. - 2011 - Theory and Applications of Robust Optimization.pdf:application/pdf},
+}
+
+@unpublished{pearce_individual_2021,
+	title = {Individual and Social Welfare: A Bayesian Perspective},
+	url = {https://economia.uc.cl/wp-content/uploads/2022/12/Individual-and-Social-Welfare-A-Bayesian-Perspective-1-2.pdf},
+	abstract = {Ragnar Frisch, one of the greatest proponents of scientiﬁc methodology in economics, warned that one cannot unreﬂectively apply the methodology of natural science to economics. I will argue that the unreﬂective application of logical positivism to welfare economics in the mid-twentieth century did great harm to that discipline. It led Arrow to impose the independence of irrelevant alternatives on any ethical method of preference aggregation, which I join many others in considering an unfortunate idea. It further caused Arrow and most of the profession to adopt an unnecessary and unnatural interpretation of his Impossibility Theorem. Viewing that theorem as a disturbing paradox encouraged many in the profession to consider theoretical work on social welfare and social choice an unpromising dead end. Samuelson’s positivist-inspired criterion for a meaningful concept has left us without a fully developed and widely accepted language for discussing utility information richer than that which is generated by standard revealed preference. The second half of the paper wades into that forbidden territory, examining diﬀerent ways that measurability, intensity, cardinality and comparability of utility are used in the literature and searching for alternative ways of understanding them.},
+	type = {Lecture},
+	howpublished = {Lecture},
+	note = {World Congress of the Econometric Society},
+	author = {Pearce, David},
+	urldate = {2025-08-15},
+	date = {2021-03},
+	langid = {english},
+	file = {PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/HWP79NHE/Pearce - Individual and Social Welfare A Bayesian Perspective.pdf:application/pdf},
+}
+
+@article{ahmed_how_2024,
+	title = {How to choose a sampling technique and determine sample size for research: A simplified guide for researchers},
+	volume = {12},
+	issn = {2772-9060},
+	url = {https://www.sciencedirect.com/science/article/pii/S2772906024005089},
+	doi = {10.1016/j.oor.2024.100662},
+	shorttitle = {How to choose a sampling technique and determine sample size for research},
+	abstract = {An appropriate sampling technique with the exact determination of sample size involves a very vigorous selection process, which is actually vital for any empirical research. It is obvious that these methodological decisions would greatly affect the internal and external validity and the overall generalizability of the study findings. This paper has comprehensively updated the guidelines on sampling methods and sample size calculation, hence giving enough evidence that will be beneficial in assisting researchers to advance the credibility and statistical power of their research work. The differences between probability sampling techniques, including simple random sampling, stratified sampling, and cluster sampling, and non-probability methods, such as convenience sampling, purposive sampling, and snowball sampling, have been fully explained. Probability is the only that can ensure the generalizability, while non-probability sampling is useful in exploratory situations. Another significant process is the determination of an optimal sample size, which, among other things, has to take into account the total population size, effect size, statistical power, confidence level, and margin of error. The paper contributes both theoretical guidance and practical tools that researchers need in choosing appropriate strategies for sampling and validating methodologically appropriate sample size calculations. In sum, such a paper sets the standard for best practice in research methodology that will drive reliability, validity, and empirical rigor across diverse studies.},
+	pages = {100662},
+	journaltitle = {Oral Oncology Reports},
+	shortjournal = {Oral Oncology Reports},
+	author = {Ahmed, Sirwan Khalid},
+	urldate = {2025-08-18},
+	date = {2024-12-01},
+	keywords = {Confidence level, Effect size, Margin error, Non-probability sampling, Population size, Probability sampling, Quantitative research, Reliability, Sample size, Sample size calculations, Sample size table, Sampling, Sampling process, Sampling technique, Study design, Survey research, Validity},
+	file = {PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/MZJMZHQ3/Ahmed - 2024 - How to choose a sampling technique and determine sample size for research A simplified guide for re.pdf:application/pdf;ScienceDirect Snapshot:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/G8NW7C5F/S2772906024005089.html:text/html},
 }
