--- a/docs/7-interviews/72-literature.tex
+++ b/docs/7-interviews/72-literature.tex
@@ -33,24 +33,25 @@ modeling results into decision-making processes.
 \subsection{Energy justice and planning}
 
 There is, to date, limited empirical work that investigates the inclusion of
-justice into formal planning processes at either the state or municipal levels. One
-study by Diezmart\'inez et al. looked at 58 climate action plans sampled from
-the 100 largest U.S. cities \cite{diezmartinez_us_2022}. This study found that,
-of the 58 climate action plans, roughly two-thirds of them attend to either
-justice or equity, while the final third do not discuss either concept. The
-researchers also found that recency, high levels of inequality within a city,
-and public engagement were determining factors in whether a climate action plan
-addressed justice. With greater public engagement leading to greater emphasis on
-justice. Further, climate action plans developed by cities prefer ``equity''
-over ``justice'' because discourses tend to focus on the superficial
+justice into formal planning processes at either the state or municipal levels.
+One study by Diezmart\'inez et al. looked at 58 climate action plans sampled
+from the 100 largest U.S. cities \cite{diezmartinez_us_2022}. This study found
+that, of the 58 climate action plans, roughly two-thirds of them attend to
+either justice or equity, while the final third do not discuss either concept.
+The researchers also found that recency, high levels of inequality within a
+city, and public engagement were determining factors in whether a climate action
+plan addressed justice. With greater public engagement leading to greater
+emphasis on justice. Further, climate action plans developed by cities prefer
+``equity'' over ``justice'' because discourses tend to focus on the superficial
 distributions of benefits and burdens rather than accounting for structural
 sources of injustice \cite{diezmartinez_us_2022}.
 
-Another study reviewed 60 energy transition ``visioning documents'' prepared by
-non-profits and advocacy organizations in the United States, rather than formal
-planning documents developed by city officials \cite{elmallah_frontlining_2022}.
-From these visioning documents, this study derived six principles of planning
-for energy justice.
+Another study reviewed 60 energy transition \textit{visioning documents},
+documents that advance a vision for the future, prepared by non-profits and
+advocacy organizations in the United States, rather than formal planning
+documents developed by city officials \cite{elmallah_frontlining_2022}. From
+these visioning documents, this study derived six principles of planning for
+energy justice.
 \begin{enumerate}
     \item Being place-based --- recognizing that each city's situation is unique
     and that there are no universal solutions.
@@ -78,10 +79,8 @@ crafting a just energy policy.
 % \subsection{Novelty of this work}
 
 % \textcolor{red}{What are some of the novelties of the present study}
-% \begin{enumerate}
-%     \item Considers structural barriers to energy modeling.
-%     \item Investigates the role concepts of energy justice do (or do not) play
-%     in energy policy for some places in Illinois.
-%     \item Evaluates a specific energy modeling tool and features of that tool.
-% \end{enumerate}
+% \begin{enumerate} \item Considers structural barriers to energy modeling.
+% \item Investigates the role concepts of energy justice do (or do not) play in
+% energy policy for some places in Illinois. \item Evaluates a specific energy
+% modeling tool and features of that tool. \end{enumerate}
 
