--- a/docs/7-interviews/73-methodology.tex
+++ b/docs/7-interviews/73-methodology.tex
@@ -1,6 +1,12 @@
 \section{Methodology}
 \label{section:interview-methods}
 
+This section describes the methods for selecting, conducting, and analying the interviews.
+First, I describe the analytical approach. Then I discuss the method for selecting interviews
+and provide an anonymized summary of the participants. Lastly, I share a table that summarizes
+the themes that came out of the interviews and which sections discuss each theme.
+
+
 \subsection{Thematic Analysis}
 This section describes a multiple-case study using interviews with energy
 planners, decision makers, and community advocates at local and state levels.
@@ -15,7 +21,9 @@ will strengthen software changes and feature additions, and support \ac{osier}'s
 use in other locations and contexts. The raw data include interview
 transcriptions and the relevant municipal climate and energy plans, if
 available. The interviews were transcribed with the ``listen and revise'' method
-using the Whisper transcription tool \cite{battaglia_listen_2024}. Whisper uses
+using the Whisper transcription tool \cite{battaglia_listen_2024}. This method has two steps. 
+First, I transcribe the interview using Whisper. Second, I listen back to the interview and
+revise the transcription to correct errors. Whisper uses
 \ac{ai} to automate the transcription process. Both the data and the \ac{ai}
 model used to transcribe the interview audio were hosted locally (i.e., without
 an internet connection), eliminating privacy concerns
@@ -31,8 +39,8 @@ Whisper interface.
     \label{fig:whisper}
 \end{figure}
 
-The transcribed interviews were initially coded using a deductive approach
-aligned with the three aims of this study:
+The transcribed interviews were initially coded using a deductive approach that involves a
+predefined set of codes. These initial codes aligned with the three aims of this study:
 \begin{enumerate}
     \item identify how (if) energy models are used to support energy planning at
     local and state levels,
@@ -42,7 +50,7 @@ aligned with the three aims of this study:
 \end{enumerate} 
 However, I combined this with an inductive process to develop additional codes.
 The benefits of this hybrid strategy are that it allows comparing and
-contrasting the results of the present study with existing literature while
+contrasting the results of the present study with existing literature and
 producing insights novel to this study. The interview coding step was also
 performed locally with the \texttt{Taguette} tool \cite{rampin_taguette_2021}.
 Figure \ref{fig:taguette} shows a screenshot of the \texttt{Taguette} software.
@@ -73,19 +81,25 @@ to five main topics (for details, see Appendix \ref{chapter:interview-guide}).
     \item Assessment of the \ac{osier} tool --- introduce \ac{osier} through a
     short presentation and invite reactions and feedback from the interviewee.
 \end{enumerate}
-The interviewees were chosen through a combination of purposive and snowball
-sampling to identify staff with sufficient and relevant energy planning
-experience. Each interviewee is involved in decision-making, planning, or
-advocacy in their respective context. Table \ref{tab:interviewees} summarizes
-the interviewees for this study. The \textit{organization} column refers to the
-organization that either employs, or is represented by, the interviewee. The
-\textit{type} column assigns the interviewee to a broad category including
+The interviewees were chosen through a combination of
+purposive\footnote{Purposive sampling selects participants based on specific
+characteristics or expertise \cite{ahmed_how_2024}.} and snowball
+\footnote{Snowball sampling involves participants referring others that also
+match the research criteria \cite{ahmed_how_2024}. In this case, interviewees
+connected me with other energy planners in their network.} sampling to identify
+staff with sufficient and relevant energy planning experience. Each interviewee
+is involved in decision-making, planning, or advocacy in their respective
+context. Table \ref{tab:interviewees} summarizes the interviewees for this
+study. The \textit{organization} column refers to the organization that either
+employs, or is represented by, the interviewee. The \textit{type} column assigns
+the interviewee to a broad category including:
 \begin{enumerate}
     \item practitioner --- someone involved in the process of energy planning
     and/or carries out policy directives from policymakers,
     \item advocate --- a person or organization that lobbies for policy outcomes
     on behalf of a group of stakeholders,
-    \item policymaker --- someone who participates in the ultimate decision-making related to energy policy.
+    \item policymaker --- someone who participates in the ultimate
+    decision-making related to energy policy.
 \end{enumerate}
     
 \begin{table}[ht!]
