--- a/docs/7-interviews/74-regions.tex
+++ b/docs/7-interviews/74-regions.tex
@@ -158,7 +158,7 @@ recycling, and clean transportation.
 The \ac{icap} defines sustainability as ``meeting the needs of the present
 without compromising the ability of future generations to meet their own
 needs.'' This definition is consistent with the concept of intergenerational
-equity, an aspect of distribution justice, described in Section
+equity, an aspect of distributive justice, described in Section
 \ref{section:energy-justice}. Further, the report outlines an objective to
 ``develop a comprehensive environmental justice plan'' that focuses on
 historically marginalized and underserved communities. This objective
